maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var action: Int;
      ^RandomMouseMaze:3: error: local variables must be initialized
  var action: Int;
      ^RandomMouseMaze:7: error: not found: value againstWall
      case 0 if(!againstWall()) => forward();
                 ^RandomMouseMaze:13: error: not found: value pickBaggle
    pickBaggle();
    ^